--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^5.5.0"
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.0"
   },
   "name": "nodejs",
   "version": "1.0.0",
   "main": "demo.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node demo.js"
+    "serve": "node demo.js",
+    "dev": "nodemon demo.js"
   },
   "keywords": [],
   "author": "",
